Update app store ID and name to 'Franco's Umbrel'

--- a/umbrel-app-store.yml
+++ b/umbrel-app-store.yml
@@ -1,2 +1,2 @@
-id: "denny" # Choose the ID for your app store. This should contain only alphabets ("a to z") and dashes ("-").
-name: "Denny´s Umbrel" # Choose the name of your app store. It will show up in the UI as "<name> App Store".
+id: "franco" # Choose the ID for your app store. This should contain only alphabets ("a to z") and dashes ("-").
+name: "Franco´s Umbrel" # Choose the name of your app store. It will show up in the UI as "<name> App Store".
